<resources>
    <string name="app_name">OraChat</string>

    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <string name="email">Email</string>
    <string name="your_email">Your Email</string>

    <string name="password">Password</string>
    <string name="your_password">Your Password</string>

    <string name="name">Name</string>
    <string name="confirm">Confirm</string>

    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="chats">Chats</string>
    <string name="account">Account</string>


    <string name="chat_row_name">%1$s by %2$s</string>
    <string name="time_since_format">%1$s - %2$s ago</string>

    <string name="today">Today</string>

    <string name="mins_ago">mins</string>
    <string name="hours_ago">hours</string>
    <string name="days_ago">days</string>
    <string name="months_ago">months</string>

    <string name="logout">Logout</string>
    <string name="logout_confirmation_title">Confirm</string>
    <string name="logout_confirmation_message">Are you sure you want to log out?</string>

    <string name="update_user_success_title">Success</string>
    <string name="update_user_success_message">User profile updated successfully.</string>

    <string name="update_user_error_title">Error</string>
    <string name="update_user_error_message">There was an error updating your profile.</string>

    <string name="register_error_title">Error</string>
    <string name="register_error_message">There was an error updating your profile.</string>

    <string name="login_error_title">Error</string>
    <string name="login_error_message">There was an error with your credentials. Please confirm them and try again.</string>

    <string name="logout_success_message">You have been logged out.</string>


</resources>
