<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/ora_grey_header"
    android:elevation="0dp"
    android:minHeight="?attr/actionBarSize">

    <TextView
        android:id="@+id/left_menu_choice"
        style="@style/orange_menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/margin_medium"
        android:gravity="left"
        tools:text="@string/register"/>

    <TextView
        style="@style/black_bold_menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/right_menu_choice"
        style="@style/orange_menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/margin_medium"
        android:gravity="left"
        tools:text="@string/login"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ora_grey_text"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
