<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!-- NAME -->
    <TextView
        android:id="@+id/emailTextView"
        style="@style/black_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/emailEditText"
        style="@style/ora_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/emailTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/emailTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <View
        android:id="@+id/emailLineView"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_extra_small"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/ora_grey_text"
        app:layout_constraintLeft_toLeftOf="@+id/emailTextView"
        app:layout_constraintLeft_toRightOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"/>

    <!-- PASSWORD -->
    <TextView
        android:id="@+id/passwordTextView"
        style="@style/black_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLineView"/>

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/ora_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/passwordTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/passwordTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailLineView"/>

    <View
        android:id="@+id/passwordLineView"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_extra_small"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/ora_grey_text"
        app:layout_constraintLeft_toLeftOf="@+id/passwordTextView"
        app:layout_constraintLeft_toRightOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLineView"/>

</android.support.constraint.ConstraintLayout>